kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btcstuff-qr
  labels:
    app: btcstuff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: btcstuff
  template:
    metadata:
      labels:
        app: btcstuff
    spec:
      containers:
        - name: qr
          image: oldbute/btcstuff-qr:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: qr-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8101
  selector:
    app: btcstuff
---
apiVersion: v1
kind: Service
metadata:
  name: qr-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8100
  selector:
    app: btcstuff
