kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btcstuff-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "www.btcstuff.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: qr-ui
                port:
                  number: 80
    - host: "qr.btcstuff.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: qr-api
                port:
                  number: 80
